// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Bleed handles 0 value 1`] = `
{
  "classNames": [
    "root",
    "--bleed-false",
  ],
  "variables": {
    "--uic-bleed-s": 0,
  },
}
`;

exports[`Styles/Bleed handles positive value 1`] = `
{
  "classNames": [
    "root",
    "--bleed",
  ],
  "variables": {
    "--uic-bleed-s": 4,
  },
}
`;

exports[`Styles/Bleed handles responsive value 1`] = `
{
  "classNames": [
    "root",
    "--bleed",
    "--bleed-false--m",
    "--bleed-true--l",
  ],
  "variables": {
    "--uic-bleed-l": 2,
    "--uic-bleed-m": 0,
    "--uic-bleed-s": 4,
  },
}
`;

exports[`Styles/Bleed handles undefined value 1`] = `null`;
